add deploy settings

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://andyvozx.github.io/FMNBB.github.io",
+  "homepage": "https://andyvozx.github.io/FMNBB",
   "name": "wax",
   "version": "0.1.0",
   "private": true,
